# PumpKin

./: .gitignore  CNAME  Copyright_and_License  README  index.md
PumpKin/PumpKin.xcodeproj/: project.pbxproj
PumpKin/PumpKin.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PumpKin_xcode/PumpKin_xcode/: PumpKin_xcode.1
PumpKin_xcode/PumpKin_xcode.xcodeproj/: project.pbxproj
PumpKin_xcode/PumpKin_xcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
User_manual/: copyright.txt  pumpkin.sty  pumpkin_1_1_usr_manual.tex  pumpkin_usr_manual.tex  usr_chap_1.tex  usr_chap_2.tex  usr_chap_3.tex  usr_chap_4.tex  usr_chap_5.tex  usr_chap_6.tex  usr_chap_8.tex  usr_chap_9.tex
User_manual/.texpadtmp/: pumpkin_1_1_usr_manual.blg  pumpkin_1_1_usr_manual.brf  pumpkin_1_2_usr_manual.aux  pumpkin_1_2_usr_manual.blg  pumpkin_1_2_usr_manual.out  pumpkin_1_2_usr_manual.toc  pumpkin_usr_manual.bbl  pumpkin_usr_manual.blg
src/: CMakeLists.txt  Makefile  PumpKin.cpp  pk_Array.cpp  pk_Array.h  pk_DataTypes.h  pk_IO.cpp  pk_IO.h  pk_Pathways.cpp  pk_Pathways.h  pk_Print.cpp  pk_Print.h
src/Examples/Global_Kin/: GLOBAL_KIN_PUMPKIN_DNDT.TXT  GLOBAL_KIN_PUMPKIN_N.TXT  GLOBAL_KIN_PUMPKIN_SPEC.TXT  QT_CONDITIONS.TXT  QT_DENSITIES.TXT  QT_MATRIX.TXT  QT_RATES.TXT  QT_REACTION_LIST.TXT  QT_SPECIES_LIST.TXT  input.txt
src/Examples/ZDPlasKin/Input_10/: qt_conditions.txt  qt_densities.txt  qt_matrix.txt
src/Examples/ZDPlasKin/Input_20/: input.txt  qt_conditions.txt  qt_densities.txt  qt_rates.txt  qt_reactions_list.txt  qt_species_list.txt
(+8 files in other folders)
